--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="container">
         <div class="column left">
           <p style="font-size:35px; margin: 0;">
-            <img src="/static/BPR icon.png" style="box-shadow: none; max-height:80px; width:auto; height:auto;" /> 
+            <img src="/static/BPR icon.png" style="box-shadow: none; max-height:65px; width:auto; height:auto;" /> 
           Best Practice Recs
           </p>
           
@@ -61,7 +61,7 @@
 
         </p>
           <p style="font-size:35px; margin: 0;">
-            <img src="/static/diagnostic icon 2.png" style="box-shadow: none; max-height:80px; width:auto; height:auto;" /> 
+            <img src="/static/diagnostic icon.png" style="box-shadow: none; max-height:65px; width:auto; height:auto;" /> 
           Diagnostic
         </p>
 
