--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
             If you are signing orders off site then you will not be able to use your ID badge. At the step where you normally flash
             your badge click on the "help me log in" link. After you answer your two authentication questions, you will be allowed to sign off 
           </p>
+
+          <p style="font-size: 25px; margin: 0;">
+            <img src="/static/protocol icon complete.png" style="box-shadow: none; max-height:65px; width:auto; height:auto" />
+            Protocols
+          </p>
+
           <p>
             <a href="static/Protocols CT ARI 2019c.pdf" />CT Protocols (updated 9-4-2019)</a>
           </p>
