--- a/index.html
+++ b/index.html
@@ -159,7 +159,10 @@
         </p>
       </div>
       <div class="column right">
-        <h1>Helpful Links:</h1>
+          <p style="font-size: 25px; margin: 0;">
+            <img src="/static/helpful links.png" style="box-shadow: none; max-height:65px; width:auto; height:auto" />
+            Helpful Links
+          </p>
           <p>
           <a href="/static/Contrast Reaction - ACR.pdf" style="color:red;">
           ACR CONTRAST REACTION Protocol
