--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
           <sub>[complete pdf here]</sub>
         </a>
         </p>
-
+        <p>
+        <a href = "static/COVID reporting language.pdf" />NEW COVID reporting language recommendations </a>
+        </p>
+     
         </p>
           <p style="font-size:25px; margin: 0;">
             <img src="/static/diagnostic icon.png" style="box-shadow: none; max-height:65px; width:auto; height:auto;" /> 
