--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
           </p>
 
           <p>
-            <a href="static/Protocols CT ARI 2019c.pdf" />CT Protocols (updated 9-4-2019)</a>
+            <a href="static/Protocols CT ARI 2020b.pdf" />CT Protocols (updated 5-19-2020)</a>
           </p>
           <p>
-            <a href="static/Protocols MRI ARI 2019c.pdf" />MRI Protocols (updated 9-4-2019)</a>
+            <a href="static/Protocols MRI ARI 2020b.pdf" />MRI Protocols (updated 5-19-2020)</a>
           </p>
           <p>
             <a href="static/Protocols - CT recommendations.pdf" />CT study recommendations (updated 9-4-2019)</a>
