--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         </p>
     
         <p>
+          <a href="/static/ACR TI-RADS ATLAS.pdf">ACR TI-RADS Atlas</a>
+        </p>
+    
+        <p>
         <a href="/static/2017 Fleishner guidelines reversed.jpg">
           2017 Fleishner guidelines for incidentally discovered pulmonary nodules
         </a>
