--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </p>
     
         <p>
-          <a href="/static/ACR TI-RADS ATLAS.pdf">ACR TI-RADS Atlas</a>
+          <a href="/static/ACR TI-RADS Atlas.pdf">ACR TI-RADS Atlas</a>
         </p>
     
         <p>
