--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
           Non-small cell Lung Cancer Staging
         </a>
         </p>
+        <p>
+          <a href="/static/ACR - Incidental Adnexal Findings on CT and MRI.pdf" />ACR Incidental Findings on CT and MRI (2020)</a>
+        </p>
+        <p>
+          <a href="/static/ACR - Incidental Mediastinal and Cardiovascular Findings.pdf" />ACR Incidental Mediastinal and Cardiovascular Findings (2018)(</a>
+        </p>
+        <p>
+          <a href="/static/ACR 2018 - Incidental Pituitary Findings.pdf" />ACR Incidental Pituitary Findings (2018)</a>
+        </p>
+        <p>
+          <a href="/static/ACR 2017 - Incidental Pancreatic Cysts.pdf" />ACR Incidental Pancreatic Cysts (2017)</a>
+        </p>
         <!--
         <p>
           <a href="/static/Incidental pancreatic cystic mass.jpg" />ACR Incidental Pancreatic Cystic Mass</a>
