--- a/index.html
+++ b/index.html
@@ -89,6 +89,30 @@
         <p>
           <a href="/static/ACR 2017 - Incidental Pancreatic Cysts.pdf" />ACR Incidental Pancreatic Cysts (2017)</a>
         </p>
+        <p>
+          <a href="/static/ACR 2019 Incidental Adrenal Masses.pdf" />ACR Incidental Adrenal Masses (2017)</a>
+        </p>
+        <p>
+          <a href="/static/ACR 2018 Incidental Renal Mass.pdf" />ACR Incidental Renal Mass (2018)</a>
+        </p>
+        <p>
+          <a href="/static/ACR 2017 - Incidental Liver Lesions.pdf" />ACR Incidental Liver Lesion (2017)</a>
+        </p>
+        <p>
+          <a href="/static/ACR 2015 Incidental Thyroid Findings.pdf" />ACR Incidental Thyroid Findings (2015)</a>
+        </p>
+        <p>
+          <a href="/static/ACR 2013 Incidental Vascular Findings.pdf" />ACR Incidental Vascular Findings (2013)</a>
+        </p>
+        <p>
+          <a href="/static/ACR 2013 Incidental Splenic and Nodal Findings.pdf" />ACR Incidental Splenic and Nodal Findings (2013)</a>
+        </p>
+        <p>
+          <a href="/static/ACR 2013 Incidental Gallbladder and Biliary Findings.pdf" />ACR Incidental Gallbladder and Biliary Findings (2013)</a>
+        </p>
+        <p>
+          <a href="/static/ACR 2010 Incidental Abdominal Findings.pdf" />ACR Incidental Abdominal Findings (2010)</a>
+        </p>
         <!--
         <p>
           <a href="/static/Incidental pancreatic cystic mass.jpg" />ACR Incidental Pancreatic Cystic Mass</a>
