--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </a>
         </p>
         <p>
-          <a href="/static/ACR - Incidental Adnexal Findings on CT and MRI.pdf" />ACR Incidental Findings on CT and MRI (2020)</a>
+          <a href="/static/ACR - Incidental Adnexal Findings on CT and MRI.pdf" />ACR Incidental Adnexal Findings on CT and MRI (2020)</a>
         </p>
         <p>
           <a href="/static/ACR - Incidental Mediastinal and Cardiovascular Findings.pdf" />ACR Incidental Mediastinal and Cardiovascular Findings (2018)(</a>
@@ -90,7 +90,7 @@
           <a href="/static/ACR 2017 - Incidental Pancreatic Cysts.pdf" />ACR Incidental Pancreatic Cysts (2017)</a>
         </p>
         <p>
-          <a href="/static/ACR 2019 Incidental Adrenal Masses.pdf" />ACR Incidental Adrenal Masses (2017)</a>
+          <a href="/static/ACR 2017 Incidental Adrenal Masses.pdf" />ACR Incidental Adrenal Masses (2017)</a>
         </p>
         <p>
           <a href="/static/ACR 2018 Incidental Renal Mass.pdf" />ACR Incidental Renal Mass (2018)</a>
@@ -108,10 +108,10 @@
           <a href="/static/ACR 2013 Incidental Splenic and Nodal Findings.pdf" />ACR Incidental Splenic and Nodal Findings (2013)</a>
         </p>
         <p>
-          <a href="/static/ACR 2013 Incidental Gallbladder and Biliary Findings.pdf" />ACR Incidental Gallbladder and Biliary Findings (2013)</a>
+          <a href="/static/ACR 2013 - Incidental Gallbladder and Biliary Findings.pdf" />ACR Incidental Gallbladder and Biliary Findings (2013)</a>
         </p>
         <p>
-          <a href="/static/ACR 2010 Incidental Abdominal Findings.pdf" />ACR Incidental Abdominal Findings (2010)</a>
+          <a href="/static/ACR 2010 - Incidental Abdominal Findings.pdf" />ACR Incidental Abdominal Findings (2010)</a>
         </p>
         <!--
         <p>
