--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a href="/static/phone directory new.pdf">
         <img src="/static/directory icon complete.png" style="box-shadow: none; max-height:125px; width:auto;" align="right" />
       </a>
+      <a href="./paging.html">How to page IR</a>
     </div>
     <div id="container">
         <div class="column left">
