--- a/paging.html
+++ b/paging.html
@@ -4,25 +4,25 @@ Paging instructions for Interventional Radiology on Call
 </HEAD>
 <BODY>
 Log onto PerfectServe and select contacts.<br>
-<img src="/paging-pictures/screenshot marked 1.jpg">
+<img src="/static/screenshot marked 1.jpg">
 
 <br>In the contacts menu select GROUPS.<br>
-<img src="/paging-pictures/screenshot marked 2.jpg">
+<img src="/static/screenshot marked 2.jpg">
 
 <br>In groups select RADIOLOGY ATTENDING.<br>
-<img src="/paging-pictures/screenshot marked 3.jpg">
+<img src="/static/screenshot marked 3.jpg">
 
 <br>Select where the patient is.<br>
-<img src="/paging-pictures/screenshot 4.jpg">
+<img src="/static/screenshot 4.png">
 
 <br>Select the patient<br>
-<img src="/paging-pictures/screenshot 5.jpg">
+<img src="/static/screenshot 5.png">
 
 <br>Select INVASIVE PROCEDURE<br>
-<img src="/paging-pictures/screenshot marked 4.jpg">
+<img src="/static/screenshot marked 4.jpg">
 
 <br>PerfectServe should list Interventionist on Call<br>
-<img src="/paging-pictures/screenshot 6.jpg">
+<img src="/static/screenshot 6.png">
 
 </BODY>
 <HTML>
