--- a/paging.html
+++ b/paging.html
@@ -3,10 +3,10 @@
 Paging instructions for Interventional Radiology on Call
 </HEAD>
 <BODY>
-Log onto PerfectServe and select contacts.<br>
-<img src="/static/screenshot marked 1.jpg" style="width:500px;height:600px;">
+Log onto PerfectServe and select contacts.<br><br>
+<img src="/static/screenshot marked 1.jpg" style="width:500px;">
 
-<br>In the contacts menu select GROUPS.<br>
+<br>In the contacts menu select GROUPS.<br><br>
 <img src="/static/screenshot marked 2.jpg" style="width:500px;height:600px;">
 
 <br>In groups select RADIOLOGY ATTENDING.<br>
