--- a/paging.html
+++ b/paging.html
@@ -1,28 +1,28 @@
 <HTML>
 <HEAD>
-Paging instructions for Interventional Radiology on Call
+<h1>Paging instructions for Interventional Radiology on Call</h1>
 </HEAD>
 <BODY>
-Log onto PerfectServe and select contacts.<br><br>
+  <h2>1)Log onto PerfectServe and select contacts.<br><br></h2>
 <img src="/static/screenshot marked 1.jpg" style="width:300px;">
 
-<br>In the contacts menu select GROUPS.<br><br>
-<img src="/static/screenshot marked 2.jpg" style="width:500px;height:600px;">
+  <h2><br>In the contacts menu select GROUPS.<br><br><br></h2>
+<img src="/static/screenshot marked 2.jpg" style="width:300px;">
 
-<br>In groups select RADIOLOGY ATTENDING.<br>
-<img src="/static/screenshot marked 3.jpg">
+  <h2><br>In groups select RADIOLOGY ATTENDING.<br><br></h2>
+<img src="/static/screenshot marked 3.jpg" style="width:300px;">
 
-<br>Select where the patient is.<br>
-<img src="/static/screenshot 4.png">
+  <h2><br>Select where the patient is.<br><br></h2>
+<img src="/static/screenshot 4.png" style="width:300px;">
 
-<br>Select the patient<br>
-<img src="/static/screenshot 5.png">
+  <h2><br>Select the patient<br><br></h2>
+<img src="/static/screenshot 5.png" style="width:300px;">
 
-<br>Select INVASIVE PROCEDURE<br>
-<img src="/static/screenshot marked 4.jpg">
+  <h2><br>Select INVASIVE PROCEDURE<br><br></h2>
+<img src="/static/screenshot marked 4.jpg" style="width:300px;">
 
-<br>PerfectServe should list Interventionist on Call<br>
-<img src="/static/screenshot 6.png">
+  <h2><br>PerfectServe should list Interventionist on Call<br><br></h2>
+<img src="/static/screenshot 6.png" style="width:300px;">
 
 </BODY>
 <HTML>
