--- a/paging.html
+++ b/paging.html
@@ -3,13 +3,13 @@
 <h1>Paging instructions for Interventional Radiology on Call</h1>
 </HEAD>
 <BODY>
-  <h2>1)Log onto PerfectServe and select contacts.<br><br></h2>
+  <h2>1)Log onto PerfectServe and select contacts.<br></h2>
 <img src="/static/screenshot marked 1.jpg" style="width:300px;">
 
-  <h2><br>In the contacts menu select GROUPS.<br><br><br></h2>
+  <h2><br>2)In the contacts menu select GROUPS.<br></h2>
 <img src="/static/screenshot marked 2.jpg" style="width:300px;">
 
-  <h2><br>In groups select RADIOLOGY ATTENDING.<br><br></h2>
+  <h2><br>3)In groups select RADIOLOGY ATTENDING.<br></h2>
 <img src="/static/screenshot marked 3.jpg" style="width:300px;">
 
   <h2><br>Select where the patient is.<br><br></h2>
