--- a/paging.html
+++ b/paging.html
@@ -12,16 +12,16 @@
   <h2><br>3)In groups select RADIOLOGY ATTENDING.<br></h2>
 <img src="/static/screenshot marked 3.jpg" style="width:300px;">
 
-  <h2><br>Select where the patient is.<br><br></h2>
+  <h2><br>4)Select where the patient is.<br></h2>
 <img src="/static/screenshot 4.png" style="width:300px;">
 
-  <h2><br>Select the patient<br><br></h2>
+  <h2><br>5)Select the patient<br></h2>
 <img src="/static/screenshot 5.png" style="width:300px;">
 
-  <h2><br>Select INVASIVE PROCEDURE<br><br></h2>
+  <h2><br>6)Select INVASIVE PROCEDURE<br></h2>
 <img src="/static/screenshot marked 4.jpg" style="width:300px;">
 
-  <h2><br>PerfectServe should list Interventionist on Call<br><br></h2>
+  <h2><br>7)PerfectServe should list Interventionist on Call<br></h2>
 <img src="/static/screenshot 6.png" style="width:300px;">
 
 </BODY>
