--- a/index.html
+++ b/index.html
@@ -263,6 +263,9 @@
               Dr. Unger update on CTA Abdominal Wall for Flaps (DIEP)
             </a>
           </p>
+          <p>
+            <a href="./inari.html />Inari resources</a>
+          </p>
       </div>
     </div>
     <center>
