--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             </a>
           </p>
           <p>
-            <a href="./inari.html />Inari resources</a>
+            <a href="./inari.html" />Inari resources</a>
           </p>
       </div>
     </div>
