--- a/inari.html
+++ b/inari.html
@@ -5,8 +5,9 @@
 <body>
     <h1>Helpful Links and Info</h1><br>
 
-    <br>Rich Cumming Cell Phone Number: 440-309-9017. Call him for all cases
-    <br><a href="https://www.youtube.com/watch?v=K5OL33Cc6BA&t=3s>Video of recorded FlowTriever case</a>
+    <p>Rich Cumming Cell Phone Number: 440-309-9017. Call him for all cases</p>
+    <p><a href="https://www.youtube.com/watch?v=K5OL33Cc6BA&t=3s" />Video of recorded FlowTriever case</a>
+    <p><a href="/static/ESC guidelines PE.pdf" />European Society of Cardiology(ESC) guidelines for managment of PE</a></p>  
 </body>
 </html>
     
