--- a/inari.html
+++ b/inari.html
@@ -8,6 +8,24 @@
     <p>Rich Cumming Cell Phone Number: 440-309-9017. Call him for all cases</p>
     <p><a href="https://www.youtube.com/watch?v=K5OL33Cc6BA&t=3s" />Video of recorded FlowTriever case</a>
     <p><a href="/static/ESC guidelines PE.pdf" />European Society of Cardiology(ESC) guidelines for managment of PE</a></p>  
+    <p>
+      Massive PE:
+        Unstable Patient requiring extensive pressors or increasing pressor requirement.
+        First line: Systemic tPA
+        Contraindication to anticoagulation: Consider risks/benefit of low dose systemic tPA based on contraindication. If central clot, consider urgent thrombectomy.
+        “Stable” Patient with hypotension or stable pressor requirement: Urgent Lysis/Thrombectomy with anesthesia team if available.
+      
+      Submassive PE:
+        High Risk (Cardiac Shock Index > 1, SBP < 100, Elevated Lactate > 2 mM, Hypoxemia)
+        Urgent Lysis/Thrombectomy. Consider anesthesia team depending on patient condition.
+        Low Risk (None of above features)
+        First line: Heparin therapy
+        onsider non-emergent thrombolysis (next day if overnight) to lower chronic risk of CTEPH
+
+      Random Notes:
+        New research shows propofol associated with increased mortality during PE lysis, should be avoided.
+        If patient has existing LBBB, pacer pads are recommended nearby prior to starting procedure in case of total heart block.
+      </p>
 </body>
 </html>
     
