--- a/inari.html
+++ b/inari.html
@@ -2,7 +2,7 @@
   <head>
     Inari Information Sheet
   </head>
-<body>
+<body bgcolor="#000000" text="#d3d3d3" link="#add8e6" vlink="#add8e6" alink="#add8e6">
     <h1>Helpful Links and Info</h1><br>
 
     <p>Rich Cumming Cell Phone Number: 440-309-9017. Call him for all cases</p>
