--- a/inari.html
+++ b/inari.html
@@ -9,6 +9,10 @@
     <p><a href="https://www.youtube.com/watch?v=K5OL33Cc6BA&t=3s" />Video of recorded FlowTriever case</a>
     <p><a href="/static/ESC guidelines PE.pdf" />European Society of Cardiology(ESC) guidelines for managment of PE</a></p>  
     <p><a href="/static/EKOS protocol.pdf" />EKOS protocol (Seminars in Interventional Radiology)</a></p>
+    <p><a href="/static/Ultima trial.pdf" />Ultima Trial</a></p>
+    <p><a href="/static/Seattle II trial.pdf" />Seattle II Trial</a></p>
+    <p><a href="/static/PERT protocol.pdf" />Pulmonary Embolus Response Team (PERT) protocol</a></p>
+    <p><img src="/static/PESI scoring.png"></p>
     <p>
       Massive PE:<br>
       <ul>  
