--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             </a>
           </p>
           <p>
-            <a href="./inari.html" />Pulmonary Embolus reference materials</a>
+            <a href="./inari.html" style="color:yellow"; />Pulmonary Embolus reference materials</a>
           </p>
       </div>
     </div>
