--- a/inari.html
+++ b/inari.html
@@ -11,7 +11,7 @@
     <p><a href="/static/EKOS protocol.pdf" />EKOS protocol (Seminars in Interventional Radiology)</a></p>
     <p><a href="/static/Ultima trial.pdf" />Ultima Trial</a></p>
     <p><a href="/static/Seattle II trial.pdf" />Seattle II Trial</a></p>
-    <p><a href="/static/PERT protocol.pdf" />Pulmonary Embolus Response Team (PERT) protocol</a></p>
+    <p><a href="/static/PERT Process Flow Summa.pdf" />Pulmonary Embolus Response Team (PERT) protocol</a></p>
     <p><img src="/static/PESI scoring.png"></p>
     <p>
       Massive PE:<br>
