--- a/index.html
+++ b/index.html
@@ -232,10 +232,10 @@
           </p>
 
           <p>
-            <a href="static/Protocols CT ARI 2020b.pdf" />CT Protocols (updated 5-19-2020)</a>
+            <a href="static/Protocols CT ARI 2020c.pdf" />CT Protocols (updated 8-24-2020)</a>
           </p>
           <p>
-            <a href="static/Protocols MRI ARI 2020b.pdf" />MRI Protocols (updated 5-19-2020)</a>
+            <a href="static/Protocols MRI ARI 2020c.pdf" />MRI Protocols (updated 8-24-2020)</a>
           </p>
           <p>
             <a href="static/Protocols - CT recommendations.pdf" />CT study recommendations (updated 9-4-2019)</a>
@@ -249,10 +249,10 @@
           <p>
             <a href="static/Gadolinium Advisory Statement ARI 2018.pdf" />Gadolinium Advisory Statement</a>
           <p>
-            <a href="static/Protocols Radiography ARI 2018.pdf" />Radiography Protcol</a>
+            <a href="static/Protocols Radiography ARI 2020.pdf" />Radiography Protcols (updated 8-24-2020)</a>
           </p>
           <p>
-            <a href="static/Protocols Ultrasound ARI 2018.pdf" />Ultrasound Protocols</a>
+            <a href="static/Protocols Ultrasound ARI 2020.pdf" />Ultrasound Protocols (updated 8-24-2020)</a>
           </p>
           <p>
             <a href="articles.html" style="color:yellow;">Reference Articles</a>
