--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         <p>
         <a href = "static/COVID reporting language.pdf" />NEW COVID reporting language recommendations </a>
         </p>
+        <p>
+          <a href = "static/renal mass flowchart.pdf" />Incidental Renal Hypodensity Flowchart </a>
+        </p>
      
         </p>
           <p style="font-size:25px; margin: 0;">
