--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <a href = "static/COVID reporting language.pdf" />NEW COVID reporting language recommendations </a>
         </p>
         <p>
-          <a href = "static/renal mass flowchart.pdf" />Incidental Renal Hypodensity Flowchart </a>
+          <a href = "static/renal mass flowchart.pdf" style="color:yellow"; />NEW Incidental Renal Hypodensity Flowchart </a>
         </p>
      
         </p>
