--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         <p>
           <a href = "static/renal mass flowchart.pdf" style="color:yellow"; />NEW Incidental Renal Hypodensity Flowchart </a>
         </p>
+        <p>
+          <a href = "static/Implementation for PE RVLV ratios.pdf" style="color:yellow"; />NEW Calculation of RVLV ratios for postive PE CTAs </a>
+        </p>
      
         </p>
           <p style="font-size:25px; margin: 0;">
