--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </p>
         <p>
           <a href = "static/Implementation for PE RVLV ratios.pdf" style="color:yellow"; />NEW Calculation of RVLV ratios for postive PE CTAs </a>
-          <a href = "static/articles/AJR RVLV.pdf" style="color:yellow"; /><sub>[AJR pdf here]</sub>
+          <a href = "static/articles/AJR RVLV ratio.pdf" style="color:yellow"; /><sub>[AJR pdf here]</sub>
         </p>
      
         </p>
