--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <a href = "static/COVID reporting language.pdf" />NEW COVID reporting language recommendations </a>
         </p>
         <p>
-          <a href = "static/renal mass flowchart.pdf" style="color:yellow"; />NEW Incidental Renal Hypodensity Flowchart </a>
+          <a href = "static/renal mass flowchart.pdf" style="color:yellow"; />NEW Incidental Renal Hypodensity Flowchart (12-22-2020)</a>
         </p>
         <p>
           <a href = "static/Implementation for PE RVLV ratios.pdf" style="color:yellow"; />NEW Calculation of RVLV ratios for postive PE CTAs </a>
