--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
+  Test test
 <img src= "static/Procedure risk stratification chart for ordering physicians.pdf">
 <img src= "static/Procedure risk stratification chart for ordering physicians 2.pdf">
 </body>
