--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -3,8 +3,8 @@
 </head>
 <body>
   Test test
-<img src= "static/Procedure risk stratification chart for ordering physicians.pdf">
-<img src= "static/Procedure risk stratification chart for ordering physicians 2.pdf">
+<embed src= "static/Procedure risk stratification chart for ordering physicians.pdf" />
+<embed src= "static/Procedure risk stratification chart for ordering physicians 2.pdf" />
 </body>
 </html>
 
