--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -2,9 +2,8 @@
 <head>
 </head>
 <body>
-  Test test
-<embed src= "static/Procedure risk stratification chart for ordering physicians.pdf" />
-<embed src= "static/Procedure risk stratification chart for ordering physicians 2.pdf" />
+<embed src= "static/Procedure risk stratification chart for ordering physicians.pdf" width = 950 />
+<embed src= "static/Procedure risk stratification chart for ordering physicians 2.pdf" width = 950 />
 </body>
 </html>
 
