--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -2,8 +2,8 @@
 <head>
 </head>
 <body>
-<embed src= "static/Procedure risk stratification chart for ordering physicians.pdf" width = "950px" />
-<embed src= "static/Procedure risk stratification chart for ordering physicians 2.pdf" width = "950px" />
+<embed src= "static/Procedure risk stratification chart for ordering physicians.pdf" width = "1050px" height = "500px" />
+<embed src= "static/Procedure risk stratification chart for ordering physicians 2.pdf" width = "1050px" height = "500px" />
 </body>
 </html>
 
