--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -2,10 +2,10 @@
 <head>
 </head>
 <body>
-<src = "static/Procedure risk stratification chart for ordering physicians.jpg">
-<src = "static/Procedure risk stratification chart for ordering physicians 2.jpg">
+<img src = "static/Procedure risk stratification chart for ordering physicians.jpg">
+<img src = "static/Procedure risk stratification chart for ordering physicians 2.jpg">
 
-<!
+<!--
 <embed src= "static/Procedure risk stratification chart for ordering physicians.pdf" width = "1050px" height = "500px" />
 <embed src= "static/Procedure risk stratification chart for ordering physicians 2.pdf" width = "1050px" height = "500px" />
 -->
