--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -2,8 +2,8 @@
 <head>
 </head>
 <body>
-<img src = "static/Procedure risk stratification chart for ordering physicians.jpg">
-<img src = "static/Procedure risk stratification chart for ordering physicians 2.jpg">
+<img src = "static/Procedure risk stratification chart for ordering physicians.jpg" width="1000px">
+<img src = "static/Procedure risk stratification chart for ordering physicians 2.jpg" width="1000px">
 
 <!--
 <embed src= "static/Procedure risk stratification chart for ordering physicians.pdf" width = "1050px" height = "500px" />
