--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -2,7 +2,8 @@
 <head>
 </head>
 <body>
-<img src = "static/ARI logo.tiff">
+<img src = "static/ARI title logo.png">
+<p>
 <img src = "static/Procedure risk stratification chart for ordering physicians.jpg" width="1000px">
 <img src = "static/Procedure risk stratification chart for ordering physicians 2.jpg" width="1000px">
 
