--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<img src = "static/ARI title logo.png">
+<img src = "static/ARI title logo.png" width="300px">
 <p>
 <img src = "static/Procedure risk stratification chart for ordering physicians.jpg" width="1000px">
 <img src = "static/Procedure risk stratification chart for ordering physicians 2.jpg" width="1000px">
