--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -4,6 +4,8 @@
 <body>
 <img src = "static/ARI title logo.png" width="300px">
 <p>
+  <h2>Interventional Radiology FAQ</h2>
+<p>
   <a href = "static/how_to_order.html:>How to place orders into EPIC</a>
   <a href = "static/labs.html">What labs do I need?</a>
   <a href = "static/Anticoagulation_guidelines.html">Anticoagulation Drug guidelines</a>
