--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -9,7 +9,7 @@
   <a href = "static/how_to_order.html:>How to place orders into EPIC</a>
   <a href = "static/labs.html">What labs do I need?</a>
   <a href = "static/Anticoagulation_guidelines.html">Anticoagulation Drug guidelines</a>
-  <a href = "static/How to page the Intervention">How to page the Interventional Radiologist on call</a>
+  <a href = "paging.html">How to page the Interventional Radiologist on call</a>
 <p>                                                 
 <img src = "static/Procedure risk stratification chart for ordering physicians.jpg" width="1000px">
 <img src = "static/Procedure risk stratification chart for ordering physicians 2.jpg" width="1000px">
