--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -6,7 +6,7 @@
 <p>
   <h2>Interventional Radiology FAQ</h2>
 <p>
-  <a href = "static/how_to_order.html:>How to place orders into EPIC</a>
+  <a href = "static/how_to_order.html">How to place orders into EPIC</a>
   <p>
   <a href = "static/labs.html">What labs do I need?</a>
   <p>
