--- a/static/labs.html
+++ b/static/labs.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<img src = "static/ARI title logo.png" width="300px">
+<img src = "ARI title logo.png" width="300px">
 <img src = "labs.jpg">
 </body>
 </html>
