--- a/static/how_to_order.html
+++ b/static/how_to_order.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<img src = "static/ARI title logo.png" width="300px">
+<img src = "ARI title logo.png" width="300px">
 <p>
 <img src = "ordering information for residents 1.pdf">
 
