--- a/static/labs.html
+++ b/static/labs.html
@@ -3,6 +3,6 @@
 </head>
 <body>
 <img src = "ARI title logo.png" width="300px">
-<img src = "labs.jpg">
+<img src = "labs.jpg" width="1000px">
 </body>
 </html>
