--- a/static/how_to_order.html
+++ b/static/how_to_order.html
@@ -4,7 +4,7 @@
 <body>
 <img src = "ARI title logo.png" width="300px">
 <p>
-<img src = "ordering information for residents 1.jpg">
+<img src = "ordering information for residents 1.jpg" width="1800px">
 
 </body>
 </html>
