--- a/static/anticoagulation_guidelines.html
+++ b/static/anticoagulation_guidelines.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<img src = "static/ARI title logo.png" width="300px">
+<img src = "ARI title logo.png" width="300px">
 <p>
 <img src = "Procedure risk stratification chart for ordering physicians 2.jpg" width = "1000px">
  
