--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -13,7 +13,10 @@
   <a href = "static/anticoagulation_guidelines.html">Anticoagulation Drug guidelines</a>
   <p>
   <a href = "paging.html">How to page the Interventional Radiologist on call</a>
-<p>                                                 
+<p>
+<p>
+  <h2>References</h2>
+  <a href = "static/
 
 <!--
 <embed src= "static/Procedure risk stratification chart for ordering physicians.pdf" width = "1050px" height = "500px" />
