--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -16,7 +16,7 @@
 <p>
 <p>
   <h2>References</h2>
-  <a href = "static/"SIR 2019 Anticoagulation guidelines.pdf">Society of Interventional Radiology Anticoagulation guidelines</a>
+  <a href = "static/SIR 2019 Anticoagulation guidelines.pdf">Society of Interventional Radiology Anticoagulation guidelines</a>
 <p>
 
 <!--
