--- a/paging.html
+++ b/paging.html
@@ -3,6 +3,8 @@
 <h1>Paging instructions for Interventional Radiology on Call</h1>
 </HEAD>
 <BODY>
+  <img src = "static/ARI title logo.png" width="300px">
+  <p>
   <h2>1)Log onto PerfectServe and select contacts.<br></h2>
 <img src="/static/screenshot marked 1.jpg" style="width:300px;">
 
