--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -18,6 +18,7 @@
   <h2>References</h2>
   <a href = "static/SIR 2019 Anticoagulation guidelines.pdf">Society of Interventional Radiology Anticoagulation guidelines</a>
 <p>
+  <a href = "static/ehaa612.pdf">2020 ESC Guidelines for the diagnosis and management of atrial fibrillation developed in collaboration with the European Association for Cardio-Thoracic Surgery (EACTS)</a>
 
 <!--
 <embed src= "static/Procedure risk stratification chart for ordering physicians.pdf" width = "1050px" height = "500px" />
