--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -19,7 +19,8 @@
   <a href = "static/SIR 2019 Anticoagulation guidelines.pdf">Society of Interventional Radiology Anticoagulation guidelines</a>
 <p>
   <a href = "static/ehaa612.pdf">2020 ESC Guidelines for the diagnosis and management of atrial fibrillation developed in collaboration with the European Association for Cardio-Thoracic Surgery (EACTS)</a>
-
+<p><p>
+For questions, suggestions, or comments please email Rob Sheu at sheur@summahealth.org
 <!--
 <embed src= "static/Procedure risk stratification chart for ordering physicians.pdf" width = "1050px" height = "500px" />
 <embed src= "static/Procedure risk stratification chart for ordering physicians 2.pdf" width = "1050px" height = "500px" />
