--- a/static/anticoagulation_guidelines.html
+++ b/static/anticoagulation_guidelines.html
@@ -4,7 +4,7 @@
 <body>
 <img src = "ARI title logo.png" width="300px">
 <p>
-<img src = "Procedure risk stratification chart for ordering physicians 2.jpg" width = "1000px">
+<img src = "Procedure risk stratification chart for ordering physicians 2 web.jpg" width = "1000px">
  
 
 </BODY>
