--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -4,7 +4,7 @@
 <body>
 <img src = "static/ARI title logo.png" width="300px">
 <p>
-  <h2>Interventional Radiology FAQ</h2>
+  <h2>Interventional Radiology FAQ (Please note that guidelines may be modified in atypical patients/situations)</h2>
 <p>
   <a href = "static/how_to_order.html">How to place orders into EPIC</a>
   <p>
