--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
           <a href = "static/Implementation for PE RVLV ratios.pdf" style="color:yellow"; />NEW Calculation of RVLV ratios for postive PE CTAs </a>
           <a href = "static/articles/AJR RVLV ratio.pdf" style="color:yellow"; /><sub>[AJR pdf here]</sub>
         </p>
-     
+        <p>
+          <a href = "static/articles/prostate.pdf" style="color:yellow"; />Nick Fulton's Guide to Prostate MRI</a>
         </p>
+
           <p style="font-size:25px; margin: 0;">
             <img src="/static/diagnostic icon.png" style="box-shadow: none; max-height:65px; width:auto; height:auto;" /> 
           Diagnostic
