--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a href = "static/articles/AJR RVLV ratio.pdf" style="color:yellow"; /><sub>[AJR pdf here]</sub>
         </p>
         <p>
-          <a href = "static/articles/prostate.pdf" style="color:yellow"; />Nick Fulton's Guide to Prostate MRI</a>
+          <a href = "static/articles/prostate.pdf" style="color:yellow"; />NEW Nick Fulton's Guide to Prostate MRI</a>
         </p>
 
           <p style="font-size:25px; margin: 0;">
