--- a/orderinginfo.html
+++ b/orderinginfo.html
@@ -14,6 +14,12 @@
   <p>
   <a href = "paging.html">How to page the Interventional Radiologist on call</a>
 <p>
+  <h2>Helpul Tips</h2>
+  <ol>
+    <li>If you order an urgent case after hours or on the weekend, please page the interventional radiology on call to make sure they are aware
+    <li>Please do not enter IR procedure orders as CONSULTS. It will be lost in EPIC limbo and not reach the interventional radiology staff 
+  </ol>
+<p>
 <p>
   <h2>References</h2>
   <a href = "static/SIR 2019 Anticoagulation guidelines.pdf">Society of Interventional Radiology Anticoagulation guidelines</a>
