--- a/index.html
+++ b/index.html
@@ -68,10 +68,15 @@
         </p>
         <p>
           <a href = "static/renal mass flowchart.pdf" style="color:yellow"; />NEW Incidental Renal Hypodensity Flowchart (12-22-2020)</a>
+          <a href = "static/articles/Bosniak Pictorial.pdf" style="color:yellow"; /><sub>[Bosniak Pictorial]</sub>>/a>
+          <a href = "static/articles/ACR Incidental Renal Mass.pdf" style="color:yellow"; /><sub[ACR Incidental Mass White Paper]</sub></a>
+        </p>
+        <p>
+        
         </p>
         <p>
           <a href = "static/Implementation for PE RVLV ratios.pdf" style="color:yellow"; />NEW Calculation of RVLV ratios for postive PE CTAs </a>
-          <a href = "static/articles/AJR RVLV ratio.pdf" style="color:yellow"; /><sub>[AJR pdf here]</sub>
+          <a href = "static/articles/AJR RVLV ratio.pdf" style="color:yellow"; /><sub>[AJR pdf here]</sub></a>
         </p>
         <p>
           <a href = "static/articles/prostate.pdf" style="color:yellow"; />NEW Nick Fulton's Guide to Prostate MRI</a>
