--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </p>
         <p>
           <a href = "static/renal mass flowchart.pdf" style="color:yellow"; />NEW Incidental Renal Hypodensity Flowchart (12-22-2020)</a>
-          <a href = "static/articles/Bosniak Pictorial.pdf" style="color:yellow"; /><sub>[Bosniak Pictorial]</sub>>/a>
+          <a href = "static/articles/Bosniak Pictorial.pdf" style="color:yellow"; /><sub>[Bosniak Pictorial]</sub></a>
           <a href = "static/articles/ACR Incidental Renal Mass.pdf" style="color:yellow"; /><sub[ACR Incidental Mass White Paper]</sub></a>
         </p>
         <p>
