--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@
         <p>
           <a href="static/normal cranial angio dsa.jpg" />Cerebral artery anatomy on Angio</a>
         </p>
+        <p>
+          <a href="static/Anatomic approach to MSK Biopsy.pdf" />Anatomic Approach to MSK biopsies (Radiographics)</a>
+        </p>
       </div>
       <div class="column right">
           <p style="font-size: 25px; margin: 0;">
