--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
         <p>
           <a href = "static/articles/prostate.pdf" style="color:yellow"; />NEW Nick Fulton's Guide to Prostate MRI</a>
         </p>
+        <p>
+          <a href = "static/Managing Incidental Findings on Thoracic CT.pdf" style="color:yellow"; />NEW Managing Incidental Findings on Thoracic CT </a>
+        </p>
 
           <p style="font-size:25px; margin: 0;">
             <img src="/static/diagnostic icon.png" style="box-shadow: none; max-height:65px; width:auto; height:auto;" /> 
