--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <a href="static/normal cranial angio dsa.jpg" />Cerebral artery anatomy on Angio</a>
         </p>
         <p>
-          <a href="static/Anatomic approach to MSK Biopsy.pdf" />Anatomic Approach to MSK biopsies (Radiographics)</a>
+          <a href="static/Anatomic approach to MSK biopsy.pdf" />Anatomic Approach to MSK biopsies (Radiographics)</a>
         </p>
       </div>
       <div class="column right">
