--- a/index.html
+++ b/index.html
@@ -275,6 +275,12 @@
             <a href="static/Protocols Ultrasound ARI 2020.pdf" />Ultrasound Protocols (updated 8-24-2020)</a>
           </p>
           <p>
+            <a href="static/NucMed Emergency On-Call Policy.pdf" />Nuc Med Emergency On-Call Procedure</a>
+          </p>
+          <p>
+            <a href="static/MRI Emergency On-Call Policy.pdf" />MRI Emergency On-Call Procedure</a>
+          </p>
+          <p>
             <a href="articles.html" style="color:yellow;">Reference Articles</a>
           </p>
         <h1>Updates and notifications</h1>
