--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
         </p>
         <p>
           <a href = "static/Managing Incidental Findings on Thoracic CT.pdf" style="color:yellow"; />NEW Managing Incidental Findings on Thoracic CT </a>
+        </p>        <p>
+          <a href = "static/ACR Thyroid Guidelines.pdf" style="color:yellow"; />NEW Managing Incidental Thyroid nodules on CT </a>
+          <a href = "static/Incidental Thyroid Nodule Follow up.pdf" style="color:yellow"; /><sub>[ACR pdf here]</sub></a>
         </p>
 
           <p style="font-size:25px; margin: 0;">
