--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             <img src="/static/BPR icon.png" style="box-shadow: none; max-height:65px; width:auto; height:auto;" /> 
           Best Practice Recs
           </p>
-          
+        
+        <p>
+          <a href="/static/bonus metrics 2022.png" style="color:orange"; />BONUS METRICS 2022</a>
+        </p>
         <p>
         <a href="/static/TIRADS chart.png">
           TI-RADS Thyroid nodule classification and recommendations
