--- a/index.html
+++ b/index.html
@@ -255,12 +255,14 @@
             <img src="/static/protocol icon complete.png" style="box-shadow: none; max-height:65px; width:auto; height:auto" />
             Protocols
           </p>
-
           <p>
-            <a href="static/Protocols CT ARI 2020c.pdf" />CT Protocols (updated 8-24-2020)</a>
+            <a href="static/protocl 2022b" />Protocol update 5-31-2022</a>
           </p>
           <p>
-            <a href="static/Protocols MRI ARI 2020c.pdf" />MRI Protocols (updated 8-24-2020)</a>
+            <a href="static/Protocols CT ARI 2022b.pdf" />CT Protocols (updated 5-31-2022)</a>
+          </p>
+          <p>
+            <a href="static/Protocols MRI ARI 2022b.pdf" />MRI Protocols (updated 5-31-2022)</a>
           </p>
           <p>
             <a href="static/Protocols - CT recommendations.pdf" />CT study recommendations (updated 9-4-2019)</a>
@@ -277,7 +279,7 @@
             <a href="static/Protocols Radiography ARI 2020.pdf" />Radiography Protcols (updated 8-24-2020)</a>
           </p>
           <p>
-            <a href="static/Protocols Ultrasound ARI 2020.pdf" />Ultrasound Protocols (updated 8-24-2020)</a>
+            <a href="static/Protocols Ultrasound ARI 2022b.pdf" />Ultrasound Protocols (updated 5-31-2022)</a>
           </p>
           <p>
             <a href="static/NucMed Emergency On-Call Policy.pdf" />Nuc Med Emergency On-Call Procedure</a>
