--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         </p>
         <p>
         
+        
         </p>
         <p>
           <a href = "static/Implementation for PE RVLV ratios.pdf" style="color:yellow"; />NEW Calculation of RVLV ratios for postive PE CTAs </a>
@@ -163,6 +164,9 @@
 
         <p>
           <a href="/static/GGO Classification Table.pdf" />GGO Classification Table</a>
+        </p>
+        <p>
+          <a href="/static/2022 Ultrasound Soft Tissue Masses" style = "color:yellow"; />NEW US Soft Tissue Masses - SRU concensus paper</a>
         </p>
       </div>
       <div class="column center">
