--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             Protocols
           </p>
           <p>
-            <a href="static/protocl 2022b" />Protocol update 5-31-2022</a>
+            <a href="static/protocol 2022b.pdf" />Protocol update 5-31-2022</a>
           </p>
           <p>
             <a href="static/Protocols CT ARI 2022b.pdf" />CT Protocols (updated 5-31-2022)</a>
