--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
           <a href = "static/articles/ACR Incidental Renal Mass.pdf" style="color:yellow"; /><sub>[ACR Incidental Mass White Paper]</sub></a>
         </p>
         <p>
-        
+          <a href = "static/Peer Learning.pdf" style = "color:yellow"; />How to submit peer learning cases</a>
+        </p>
+        <p>
+          <a href = "static/Radiology QA via Perfect Serve.pdf" style = "color:yellow"; />How to submit Radiology QA via PerfectServe</a>
+        </p>
         
         </p>
         <p>
