--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <a href="/static/GGO Classification Table.pdf" />GGO Classification Table</a>
         </p>
         <p>
-          <a href="/static/2022 Ultrasound Soft Tissue Masses" style = "color:yellow"; />NEW US Soft Tissue Masses - SRU concensus paper</a>
+          <a href="/static/2022 Ultrasound Soft Tissue Masses.pdf" style = "color:yellow"; />NEW US Soft Tissue Masses - SRU concensus paper</a>
         </p>
       </div>
       <div class="column center">
