--- a/index.html
+++ b/index.html
@@ -296,6 +296,9 @@
             <a href="static/MRI Emergency On-Call Policy.pdf" />MRI Emergency On-Call Procedure</a>
           </p>
           <p>
+            <a href="static/Neurologist phone numbers.pdf" />Phone numbers for Neurologists</a>
+          </p>
+          <p>
             <a href="articles.html" style="color:yellow;">Reference Articles</a>
           </p>
         <h1>Updates and notifications</h1>
@@ -304,9 +307,10 @@
               Dr. Unger update on CTA Abdominal Wall for Flaps (DIEP)
             </a>
           </p>
-          <p>
+          <!--<p>
             <a href="./inari.html" style="color:yellow"; />Pulmonary Embolus reference materials</a>
           </p>
+          -->
       </div>
     </div>
     <center>
