--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
         </p>
 
         <p>
-        <a href="/static/articles/Lung-RADS 1-1.pdf">2019 LUNG-RADS 1.1 screening guidelines</a>
+        <a href="/static/articles/Lung-RADS 2022.pdf">2019 LUNG-RADS 1.1 screening guidelines</a>
         <a href="/static/articles/LungRADS 1-1 updates.pdf" /><sub>[complete powerpoint]</sub></a>
+        <a href="/static/articles/Lung-RADS 2022 summary of changes.pdf" />2022 Summary of Changes</a>
         </p>
 
         <p>
