--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <a href="static/Protocols CT ARI 2022b.pdf" />CT Protocols (updated 5-31-2022)</a>
           </p>
           <p>
-            <a href="static/Protocols MRI ARI 2022b.pdf" />MRI Protocols (updated 5-31-2022)</a>
+            <a href="static/Protocols MRI ARI 2022c.pdf" />MRI Protocols (updated 12-7-2022)</a>
           </p>
           <p>
             <a href="static/Protocols - CT recommendations.pdf" />CT study recommendations (updated 9-4-2019)</a>
