--- a/articles.html
+++ b/articles.html
@@ -70,6 +70,9 @@
           <p>
             <a href="static/articles/TI-RADS comparison.pdf" />AJR - Comparison of Performance of TI-RADS and ATA Guidelines</a>
           </p>
+          <p>
+            <a href="static/articles/Radiology Close ENT CT.pdf" />Radiology - The Preoperative Sinus CT: Avoiding a CLOSE call</a>
+          </p>
     </div>
     <div class="column right">
       <h1>Interventional</h1>
