--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           <a href="/static/bonus metrics 2022.png" style="color:orange"; />BONUS METRICS 2022</a>
         </p>
         <p>
+          <a href="/static/MIPS requirements.pdf" style="color:orange"; />2023 MIPS requirements</a>
+        </p>
+        <p>
         <a href="/static/TIRADS chart.png">
           TI-RADS Thyroid nodule classification and recommendations
         </a>
