--- a/index.html
+++ b/index.html
@@ -247,6 +247,9 @@
             Helpful Links
           </p>
           <p>
+            <a href = "Sugano.html" style="color:yellow;"> NEW! Sugano's Tech Tips</a>
+          </p>
+          <p>
           <a href="/static/Contrast Reaction - ACR.pdf" style="color:red;">
           ACR CONTRAST REACTION Protocol
           </a>
