--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             Helpful Links
           </p>
           <p>
-            <a href = "Sugano.html" style="color:yellow;"> NEW! Sugano's Tech Tips</a>
+            <a href = "sugano.html" style="color:yellow;"> NEW! Sugano's Tech Tips</a>
           </p>
           <p>
           <a href="/static/Contrast Reaction - ACR.pdf" style="color:red;">
