--- a/sugano.html
+++ b/sugano.html
@@ -13,7 +13,7 @@
       <a href = "/static/Sugano - studies waiting for priors.pdf">Getting priors for studies</a>
     </p>
     <p>
-      <a href = "/static/Sugano - Disappearing Epic Integration fix.pdf">Disappearing EPIC Integration Fix</a>
+      <a href = "/static/Sugano - Disappearing Epic integration fix.pdf">Disappearing EPIC Integration Fix</a>
     </p>
     <p>
       <a href = "/static/Sugano - How to update your password on home workstations.pdf">How to update your password on home workstations</a>
