--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </p>
         
         <p>
-          <a href="/static/bonus metrics 2022.png" style="color:orange"; />BONUS METRICS 2022</a>
+          <a href="/static/MIPS 2024.html" style="color:orange"; />MIPS Requirements 2024</a>
         </p>
         <p>
           <a href="/static/MIPS requirements.pdf" style="color:orange"; />2023 MIPS requirements</a>
