--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </p>
         
         <p>
-          <a href="/static/MIPS 2024.html" style="color:orange"; />MIPS Requirements 2024</a>
+          <a href="/static/MIPS 2024.pdf" style="color:orange"; />MIPS Requirements 2024</a>
         </p>
         <!--  
         <p>
