--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <img src="/static/BPR icon.png" style="box-shadow: none; max-height:65px; width:auto; height:auto;" /> 
           Best Practice Recs
           </p>
-        
+        <p>
+          <a href="/static/CTR guidelines.pdf" style="color:orange"; />CTR Guidelines</a>
+        </p>
         <p>
           <a href="/static/MIPS 2024.pdf" style="color:orange"; />MIPS Requirements 2024</a>
         </p>
